--- a/01/playbook.yaml
+++ b/01/playbook.yaml
@@ -1,3 +1,5 @@
 hosts: localhost
 tasks:
-- copy: src="~/master.config" dest="~/.gitconfig"
+- copy:
+    src="~/master.config" 
+    dest="~/.gitconfig"
