Add ansible playbook

--- a/01/playbook.yaml
+++ b/01/playbook.yaml
@@ -1,5 +1,7 @@
-hosts: localhost
-tasks:
-    - copy:
-          src: "~/master.config"
-          dest: "~/.gitconfig"
+---
+# ansbile -m copy -a "src=~/master.gitconfig dest=~/.gitconfig" localhost
+
+- name: Ensure ~/.gitconfig copied from ~/.master.gitconfig
+  hosts: localhost
+  tasks: 
+  - copy: src="~/master.gitconfig" dest="~/.gitconfig"
