--- a/01/playbook.yaml
+++ b/01/playbook.yaml
@@ -6,3 +6,10 @@
   hosts: localhost
   tasks: 
   - copy: src="~/master.gitconfig" dest="~/.gitconfig"
+- name: Ensure homebrew packages are installed
+  hosts: localhost
+  tasks:
+  - homebrew: name=bat state=latest
+  - homebrew:
+      name: jq
+      state: latest
